--- a/src/styles/components/comment.less
+++ b/src/styles/components/comment.less
@@ -1,5 +1,6 @@
 .cmt-wrap{
     overflow: hidden;
+    margin-top: 16rpx;
     background-color: #fff;
     border-top: 1rpx solid #e5e5e5;
     border-bottom: 1rpx solid #e5e5e5;
