--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -295,6 +295,13 @@ button.pain-btn[open-type="share"]::after {
   border-top: 1rpx solid #e5e5e5;
   background-color: #fff;
 }
+.fix-btm-col-2{
+  display: flex;
+  justify-content: space-between;
+  button{
+    width: 50%;
+  }
+}
 
 //******图片样式******/
 // @mixin icon-image(@size){
